feat(nginx): add support for pcre2
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -1,4 +1,4 @@
-ARG NGINX_VERSION="1.20.2"
+ARG NGINX_VERSION="1.22.0"
 
 FROM nginx:${NGINX_VERSION} as build
 
@@ -20,7 +20,7 @@ RUN set -eux; \
         libcurl4-gnutls-dev \
         libgeoip-dev \
         liblua5.3-dev \
-        libpcre++-dev \
+        libpcre2-dev \
         libtool \
         libxml2-dev \
         make \
@@ -58,7 +58,7 @@ RUN set -eux; \
     ./build.sh; \
     git submodule init; \
     git submodule update; \
-    ./configure --with-yajl=/sources/yajl/build/yajl-${YAJL_VERSION}/ --with-geoip; \
+    ./configure --with-yajl=/sources/yajl/build/yajl-${YAJL_VERSION}/ --with-geoip --with-pcre2; \
     make install; \
     strip /usr/local/modsecurity/lib/lib*.so*
 
