--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -8,6 +8,8 @@ ARG MODSEC_VERSION=3.0.8 \
     LMDB_VERSION=0.9.29 \
     SSDEEP_VERSION=2.14.1
 
+# Note: libpcre++-dev (PCRE3) is required by the build description,
+# even though the build will use PCRE2.
 RUN set -eux; \
     echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections; \
     apt-get update -qq; \
@@ -20,6 +22,7 @@ RUN set -eux; \
         libcurl4-gnutls-dev \
         libgeoip-dev \
         liblua5.3-dev \
+        libpcre++-dev \
         libpcre2-dev \
         libtool \
         libxml2-dev \
