fix(pcre2): add prefix path for additional archs
On debian arm64 path is /usr/lib/aarch64-linux-gnu, and looks like
the autoconf script is not finding libraries there.

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -61,7 +61,7 @@ RUN set -eux; \
     ./build.sh; \
     git submodule init; \
     git submodule update; \
-    ./configure --with-yajl=/sources/yajl/build/yajl-${YAJL_VERSION}/ --with-geoip --with-pcre2; \
+    ./configure --with-yajl=/sources/yajl/build/yajl-${YAJL_VERSION}/ --with-geoip --with-pcre2="$(pcre2-config --prefix)"; \
     make install; \
     strip /usr/local/modsecurity/lib/lib*.so*
 
