--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -50,7 +50,7 @@ RUN set -eux; \
     ./build.sh; \
     git submodule init; \
     git submodule update; \
-    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip --with-pcre2; \
+    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip --with-pcre2="$(pcre2-config --prefix)"; \
     make install
 
 # We use master
