--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -62,7 +62,7 @@ RUN set -eux; \
     git submodule init; \
     git submodule update; \
     # patch make file to support Debian package names (see https://github.com/SpiderLabs/ModSecurity/issues/2810) \
-    sed -i -e 's/^PCRE2_POSSIBLE_LIB_NAMES=\(.*\)"/PCRE2_POSSIBLE_LIB_NAMES=\1 libpcre2-8"/' build/pcre2.m4 ; \
+    sed -i -e 's/^\(PCRE2_POSSIBLE_LIB_NAMES=.*\)"/\1 libpcre2-8"/' build/pcre2.m4; \
     ./configure --with-yajl=/sources/yajl/build/yajl-${YAJL_VERSION}/ --with-geoip --with-pcre2; \
     make install; \
     strip /usr/local/modsecurity/lib/lib*.so*
