--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -29,6 +29,7 @@ RUN set -eux; \
         make \
         openssl \
         openssl-dev \
+        patch \
         pkgconfig \
         pcre-dev \
         pcre2-dev \
@@ -45,15 +46,13 @@ RUN set -eux; \
     make install
 
 RUN set -eux; \
-    git clone https://github.com/SpiderLabs/ModSecurity --branch v"${MODSEC_VERSION}" --depth 1; \
+    git clone https://github.com/SpiderLabs/ModSecurity --branch v"${MODSEC_VERSION}" --depth 1 --recursive; \
     cd ModSecurity; \
+    curl -sSL https://github.com/SpiderLabs/ModSecurity/pull/2813.patch -o - | patch -p1; \
     ./build.sh; \
-    git submodule init; \
-    git submodule update; \
-    # patch make file to support Debian package names (see https://github.com/SpiderLabs/ModSecurity/issues/2810) \
-    sed -i -e 's/^\(PCRE2_POSSIBLE_LIB_NAMES=.*\)"/\1 libpcre2-8"/' build/pcre2.m4; \
-    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip --with-pcre2; \
-    make install
+    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip --with-pcre2  --enable-silent-rules; \
+    make install; \
+    strip /usr/local/modsecurity/lib/lib*.so*
 
 # We use master
 RUN set -eux; \
