fix(alpine): add pcre and pcre2 to main image
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -156,6 +156,8 @@ RUN set -eux; \
         lmdb-dev \
         moreutils \
         tzdata \
+        pcre \
+        pcre2 \
         yajl; \
     mkdir /etc/nginx/ssl/; \
     mkdir -p /tmp/modsecurity/data; \
