--- a/v3-nginx/templates/includes/proxy_backend.conf.template
+++ b/v3-nginx/templates/includes/proxy_backend.conf.template
@@ -1,6 +1,6 @@
 proxy_set_header Host $host;    
 proxy_set_header Proxy "";
-proxy_set_header Upgrade $connection_upgrade;
+proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection $connection_upgrade;
 proxy_set_header ${REAL_IP_HEADER} $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
