--- a/.github/workflows/verifyimage.yml
+++ b/.github/workflows/verifyimage.yml
@@ -75,6 +75,6 @@ jobs:
         run: |
           docker logs "${{ matrix.image }}${{ matrix.variant }}-test"
           [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{.State.Running}}') = 'true' ]
-          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{json .State.Health}}') | jq -r '.Status' = 'starting' ]
+          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{json .State.Health.Status}}') = 'starting' ]
           sleep 30
-          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{json .State.Health}}') | jq -r '.Status' = 'healthy' ]
+          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{json .State.Health.Status}}') = 'healthy' ]
