--- a/.github/workflows/verifyimage.yml
+++ b/.github/workflows/verifyimage.yml
@@ -75,6 +75,24 @@ jobs:
         run: |
           docker logs "${{ matrix.image }}${{ matrix.variant }}-test"
           [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{.State.Running}}') = 'true' ]
-          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{json .State.Health.Status}}') = 'starting' ]
-          sleep 30
-          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{json .State.Health.Status}}') = 'healthy' ]
+          while true
+          do
+            STATUS=$(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{.State.Health.Status}}')
+            case ${STATUS} in
+              healthy)
+                echo "$(date -u) Healthy!!!"
+                sleep 1
+                exit 0;;
+              unhealthy)
+                echo "$(date -u) Unhealthy!!!"
+                sleep 1
+                exit 9;;
+              starting)
+                echo "$(date -u) starting!!!";;
+              *) 
+                echo "Huh? ${STATUS}"
+                sleep 1
+                exit 10;;
+            esac
+            sleep 1
+          done
