fix(nginx): i386 is detected as x86_64 in build
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -44,8 +44,8 @@ RUN set -eux; \
     git clone https://github.com/SpiderLabs/ModSecurity --branch v"${MODSEC_VERSION}" --depth 1 --recursive; \
     cd ModSecurity; \
     sed -ie 's/\(PKG_PROG_PKG_CONFIG\)/\1\nAC_CANONICAL_HOST/g' configure.ac; \
-    sed -ie 's/i386/${host_cpu}/g' build/ssdeep.m4; \
-    sed -ie 's/i386/${host_cpu}/g' build/pcre2.m4; \
+    sed -ie 's/x86_64/${host_cpu}/g' build/ssdeep.m4; \
+    sed -ie 's/x86_64/${host_cpu}/g' build/pcre2.m4; \
     ./build.sh; \
     ./configure --with-yajl --with-ssdeep --with-geoip --with-pcre2 --enable-silent-rules; \
     make install; \
