feat(apache): add PROXY_ERROR_OVERRIDE variable
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v2-apache/conf/extra/httpd-vhosts.conf
+++ b/v2-apache/conf/extra/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 # Apache VirtualHost configuration for both HTTP and SSL
 
-ProxyErrorOverride on
+ProxyErrorOverride ${PROXY_ERROR_OVERRIDE}
 ProxyPass / ${BACKEND}/ disablereuse=on
 ProxyPassReverse / ${BACKEND}/
 ProxyPreserveHost ${PROXY_PRESERVE_HOST}
